Finished revising the second laboratory assignment.

--- a/labs/lab2/cs380F2014-lab2.tex
+++ b/labs/lab2/cs380F2014-lab2.tex
@@ -28,18 +28,18 @@ consultation throughout the laboratory session and then held on reserve in my ou
 about this book by visiting the following Web site: \url{http://www.dcc.fc.up.pt/~ltorgo/DataMiningWithR/}.
 
 As previously mentioned, this assignment invites you to implement procedural (or, imperative) methods---in the R
-language for statistical computation---for answering questions about a real-world data set.  To start this laboratory
-assignment, you should enter into the command-line-based and interactive environment of the R language. You can do this
+language for statistical computation---to answer questions about a real-world data set.  To start this laboratory
+assignment, you should start using the command-line-based and interactive environment of the R language. You can do this
 by typing ``{\tt R}'' into your terminal window. After making sure that you already have a Web browser open, you should
 next type the command ``{\tt help.start()}'' in order to load the help system for R. You can use this Web-based help
 environment throughout the laboratory session as you learn new commands for imperative data management. In addition, you
 can learn more about R by visiting Web sites such as \url{http://www.statmethods.net/} and
 \url{http://www.cyclismo.org/tutorial/R/}.
 
-To access the data files needed for this assignment, we must install the software package for the companion textbook.
+To access the data files needed for this assignment, you must install the software package for the companion textbook.
 Since this process may takes a long time, you should type the following command in your R shell right away: ``{\tt
   install.packages("DMwR")}''. Once you have pressed enter, you will see that many lines scroll in your terminal window
-as R performs a network install of all the required packages, including the required data files.  When this process
+as R performs a network install of all the required packages, including the needed data files.  When this process
 finishes, you can load the library by typing ``{\tt library(DMwR)}''. You should also repeat these steps for the
 ``{\tt Hmisc}'' package.
 
@@ -48,10 +48,10 @@ manual for a specific command, say {\tt subset}, by typing ``{\tt ?subset}'' at 
 assignment, you should learn how to use several R commands and write a short description of their input, output, and
 behavior, including one concrete example of the command in action with the data set discussed at a later stage of the
 assignment. Please see the course instructor if you have a question about how to use a data manipulation command in R.
-In particular, you must study, at minimum, the following commands:
+In particular, you must study the following commands available in the R language:
 
 \begin{itemize}
-    \itemsep0pt
+    \itemsep.1in
   \item {\tt attach}
   \item {\tt names}
   \item {\tt head}
@@ -82,7 +82,7 @@ After you have learned more about how each one of the aforementioned commands wo
 {\tt algae} data set that is part of the {\tt DMwR} library. What are the names of the attributes in this data set? How
 many attributes are in the data set? How many rows are in the data set? While you must use the R programming language to
 answer these questions, you can check your responses by visiting the ``Algae Data Set Description'' in the UCI Machine
-Learning Repository and the ``Predicting Algae Blooms'' chapter in Torgo's book. 
+Learning Repository and reading the ``Predicting Algae Blooms'' chapter in Torgo's book. 
 
 As you learn more about this data set, you will notice that the {\tt a1} attribute gives the frequency number of a
 harmful algae known as ``a1'' in the data set. Please note that the data set does not contain any information about the
@@ -131,7 +131,7 @@ the previously stated questions.
     \item The description of the input, output, and behavior for the required R commands.
     \item Answers to all of the questions posed, with supporting output and evidence as appropriate. 
     \item At least one supporting visualization of some trend that you found in the data set. 
-    \item A commentary on the challenges that you faces and the way that you overcame them.
+    \item A commentary on the challenges that you faced and the way(s) that you overcame them.
   \end{enumerate}
 
 \vspace*{-.1in} 
