Added some extra quotation marks.

--- a/labs/lab2/cs380F2014-lab2.tex
+++ b/labs/lab2/cs380F2014-lab2.tex
@@ -108,10 +108,10 @@ There are many other interesting trends evident in the algae data set. Using any
 identify and try to explain one additional trend. As you are completing this last part of the laboratory assignment, it
 may be helpful to visualize the {\tt algae} data set so that you can easily and quickly spot new and interesting
 phenomena. To create a wide variety of different graphs, you can explore the use of the ``Lattice'' package that is
-available after you type the {\tt library(lattice)} command. You can learn more about Lattice by visiting the package's
-Web site that is available at \url{http://lmdvr.r-forge.r-project.org/}. Once you have learned how to use Lattice to
-produce simple data visualizations in R, you should construct at least one graph to accompany your response to one of
-the previously stated questions.
+available after you type the ``{\tt library(lattice)}'' command. You can learn more about Lattice by visiting the
+package's Web site that is available at \url{http://lmdvr.r-forge.r-project.org/}. Once you have learned how to use
+Lattice to produce simple data visualizations in R, you should construct at least one graph to accompany your response
+to one of the previously stated questions.
 
 % At this point, you should go into the
 % {\tt cs112s2014-share} repository and use the {\tt cp -r} command to copy the entire {\tt labs/} directory from the {\tt
