Updated the header information for the lab3 assignment.

--- a/labs/lab3/cs380F2014-lab3.tex
+++ b/labs/lab3/cs380F2014-lab3.tex
@@ -1,13 +1,13 @@
-%!TEX root=cs380F2014-lab2.tex
-% mainfile: cs380F2014-lab2.tex
+%!TEX root=cs380F2014-lab3.tex
+% mainfile: cs380F2014-lab3.tex
 
 \input{labspre.tex}
 
 \usepackage[compact]{titlesec}
 
 \begin{document}
-\MYTITLE{Laboratory Assignment Two: Procedural Programming and File Processing Systems}
-\MYHEADERS{Laboratory Assignment Two}{Due: September 10, 2014}
+\MYTITLE{Laboratory Assignment Three: Procedural Programming and File Processing Systems}
+\MYHEADERS{Laboratory Assignment Three}{Due: September 24, 2014}
 
 \section*{Introduction}
 
