Adding more details about the Git repository.

--- a/labs/lab3/cs380F2014-lab3.tex
+++ b/labs/lab3/cs380F2014-lab3.tex
@@ -27,6 +27,9 @@ Since you will complete this assignment in a team, you should first gather toget
 yourselves to each other and explaining your interests and areas of expertise. Next, one member of your team should
 create a Git repository for this laboratory assignment, sharing it with all of the team members and the course
 instructor. Please make sure that every member of your team has write access to the Git repository hosted by Bitbucket.
+Additionally, each student should ask the course instructor to share the {\tt cs380f2014-share} repository with you and
+then use the {\tt git clone git@bitbucket.org:gkapfham/cs380f2014-share.git} command to obtain access to the resources
+for this laboratory assignment.
 
 \section*{Summary of the Required Deliverables}
 
