--- a/labs/lab3/cs380F2014-lab3.tex
+++ b/labs/lab3/cs380F2014-lab3.tex
@@ -26,10 +26,20 @@ design, and the empirical results.
 Since you will complete this assignment in a team, you should first gather together with your team members, introducing
 yourselves to each other and explaining your interests and areas of expertise. Next, one member of your team should
 create a Git repository for this laboratory assignment, sharing it with all of the team members and the course
-instructor. Please make sure that every member of your team has write access to the Git repository hosted by Bitbucket.
-Additionally, each student should ask the course instructor to share the {\tt cs380f2014-share} repository with you and
+instructor. Please make sure that every member of your team has write access to this Git repository hosted by Bitbucket.
+Additionally, each student should ask the course instructor to give you read access to the {\tt cs380f2014-share} and
 then use the {\tt git clone git@bitbucket.org:gkapfham/cs380f2014-share.git} command to obtain access to the resources
 for this laboratory assignment.
+
+\section*{Combining Imperative and Declarative Programming with JoSQL}
+
+\begin{sloppypar}
+Start exploring the {\tt cs380f2014-share} repository, specifically studying the files in the {\tt
+  cs380F2014-share/labs/lab3} directory. What files are available? What is the purpose of these files? Make sure that
+you used a text editor to review the source code of the {\tt FileFinder.java} program. Once you understand how this
+program works, you should the specified directory to one that is contained in your home account and consider changing
+the file matching pattern some something instead of {\tt LIKE `\%ja\%'}.
+\end{sloppypar}
 
 \section*{Summary of the Required Deliverables}
 
