Finished a first draft of the content on the first page of the lab3.

--- a/labs/lab3/cs380F2014-lab3.tex
+++ b/labs/lab3/cs380F2014-lab3.tex
@@ -27,18 +27,24 @@ Since you will complete this assignment in a team, you should first gather toget
 yourselves to each other and explaining your interests and areas of expertise. Next, one member of your team should
 create a Git repository for this laboratory assignment, sharing it with all of the team members and the course
 instructor. Please make sure that every member of your team has write access to this Git repository hosted by Bitbucket.
-Additionally, each student should ask the course instructor to give you read access to the {\tt cs380f2014-share} and
-then use the {\tt git clone git@bitbucket.org:gkapfham/cs380f2014-share.git} command to obtain access to the resources
-for this laboratory assignment.
+Additionally, each student should ask the course instructor to give you read access to the {\tt cs380f2014-share}
+repository and then use the {\tt git clone git@bitbucket.org:gkapfham/cs380f2014-share.git} command to obtain access to
+the resources for this laboratory assignment.
 
 \section*{Combining Imperative and Declarative Programming with JoSQL}
 
 \begin{sloppypar}
-Start exploring the {\tt cs380f2014-share} repository, specifically studying the files in the {\tt
-  cs380F2014-share/labs/lab3} directory. What files are available? What is the purpose of these files? Make sure that
-you used a text editor to review the source code of the {\tt FileFinder.java} program. Once you understand how this
-program works, you should the specified directory to one that is contained in your home account and consider changing
-the file matching pattern some something instead of {\tt LIKE `\%ja\%'}.
+
+  Start exploring the {\tt cs380f2014-share} repository, specifically studying the files in the {\tt
+    cs380F2014-share/labs/lab3/} directory. What files are available? What is the purpose of these files? Make sure that
+  you used a text editor to review the source code of the {\tt FileFinder.java} program. Once you understand how this
+  program works, you should change the specified directory to one that is contained in your home account and consider
+  modifying the file matching pattern some something instead of {\tt LIKE `\%ja\%'}. Next, you should set your {\tt
+    CLASSPATH} environment variable to include both the current working directory and the two Java archives in the {\tt lib/}
+  directory. Before you move on to the next phase of this assignment, please make sure that every member of your team is
+  able to compile and run the {\tt FileFinder.java} program. In addition, every member of your team should be explain to
+  explain why this program works the way that it does.
+
 \end{sloppypar}
 
 \section*{Summary of the Required Deliverables}
