Further revisions to the content about the benchmarks.

--- a/labs/lab3/cs380F2014-lab3.tex
+++ b/labs/lab3/cs380F2014-lab3.tex
@@ -18,7 +18,7 @@ library. That is, this assignment introduces a method for combining the imperati
 managing data. After you have finished configuring your development environment to run a Java program that uses JoSQL,
 you will implement your own benchmarking framework that will support experiments that measure the performance of
 different JoSQL features.  Finally, you will perform a comprehensive empirical study, analyze and visualize the results,
-write up the results in a formal report, and give a group presentation describing your benchmarks, the experiment
+write up the results in a formal report, and give a team presentation describing your benchmarks, the experiment
 design, and the empirical results.
 
 \section*{Accessing the JoSQL Library}
@@ -64,22 +64,23 @@ benchmarks, you should run them to collect performance results concerning time a
 Please execute the benchmarks multiple times and record the results in a structured fashion; each team should
 consider storing their data in comma-separated value (CSV) files.
 
-In order to analyze the results, you should construct data tables and visualizations.  For instance, you may want to
-write programs in the R language for statistical computation.  After developing an understanding of the fundamental
-trends in your data sets, you should write a report that details your findings.  The report should explain your
+In order to analyze the results, you should construct data tables and visualizations.  For instance, if your team stored
+their data in CSV files, you can easily write a program in the R language for statistical computing that can read in the
+these files and subsequently analyze and visualize it. After developing an understanding of the fundamental
+trends in your data sets, your team should write a report that details your findings.  The report should explain your
 benchmarks, the evaluation metrics, and the key empirical results.  In particular, you should observe the performance
 trends and explain why these trends are evident in your data set.  Whenever possible, you should comment on the
 practical implications of your results for software developers who may use JoSQL.  
 
-You are responsible for working in a group to coordinate the experiments that you conduct.  In particular, you should
-make sure that each member of the group implements different benchmarks and then conducts experiments in a uniform
-manner.  After the members of the group have individually completed the experiments and recorded and analyzed their
+You are responsible for working in a team to coordinate the experiments that you conduct.  In particular, you should
+make sure that each member of the team implements different benchmarks and then conducts experiments in a uniform
+manner.  After the members of the team have individually completed the experiments and recorded and analyzed their
 results, you should meet together to discuss the trends that you found in the data sets.  While students are responsible
-for writing their own reports that focus on their own data sets and analyses, they should work together in a group to
+for writing their own reports that focus on their own data sets and analyses, they should work together in a team to
 prepare a single presentation for the laboratory session on which this assignment is due.  After explaining the purpose
 and configuration of your experimental study, the presentation should highlight the similarities and differences in the
-results developed by each group member.  Finally, you should draw some conclusions about which algorithmic approach
-and/or data management technique is the fastest.  Please note that each group member is responsible for independently
+results developed by each team member.  Finally, you should draw some conclusions about which algorithmic approach
+and/or data management technique is the fastest.  Please note that each team member is responsible for independently
 conducting their own experiments, writing their own report, and adequately participating in the completion of the slides
 and the final presentation.  </p>
 
