Making several small teaks to produce the final version of lab3.

--- a/labs/lab3/cs380F2014-lab3.tex
+++ b/labs/lab3/cs380F2014-lab3.tex
@@ -16,7 +16,7 @@ In this laboratory assignment, we will learn how to use a variant of the structu
 matching objects in the heap of a Java virtual machine, with a particular focus on the ``Java Objects for SQL'' (JoSQL)
 library. That is, this assignment introduces a method for combining the imperative and declarative approaches to
 managing data. After you have finished configuring your development environment to run a Java program that uses JoSQL,
-you will implement your own benchmarking framework that will support experiments that measure the performance of
+you will implement your own benchmarking framework that in support of experiments that measure the performance of
 different JoSQL features.  Finally, you will perform a comprehensive empirical study, analyze and visualize the results,
 write up the results in a formal report, and give a team presentation describing your benchmarks, the experiment
 design, and the empirical results.
@@ -68,14 +68,14 @@ consider storing their data in comma-separated value (CSV) files.
 
 In order to analyze the results, you should construct data tables and visualizations.  For instance, if your team stored
 their data in CSV files, you can easily write a program in the R language for statistical computing that can read in the
-these files and subsequently analyze and visualize it. After developing an understanding of the fundamental
+these files and subsequently analyze and visualize them. After developing an understanding of the fundamental
 trends in your data sets, your team should write a report that details your findings.  The report should explain your
 benchmarks, the evaluation metrics, and the key empirical results.  In particular, you should observe the performance
 trends and explain why these trends are evident in your data set.  Whenever possible, you should comment on the
 practical implications of your results for software developers who may use JoSQL.  
 
 You are responsible for working in a team to coordinate the experiments that you conduct.  In particular, you should
-make sure that each member of the team implements a different benchmarks and then, as a team, you conduct experiments in
+make sure that each member of the team implements a different benchmark and then, as a team, you conduct experiments in
 a uniform manner.  After the members of the team have individually completed their assigned experiments and recorded
 results, you should meet together to merge your data sets and discuss the trends that you found in them.  Additionally,
 your team should prepare a single laboratory report, following the requirements outlined in the previous paragraph.
@@ -84,14 +84,14 @@ slides focusing on the benchmarking framework, the design of the experiments, an
   give their presentation during the laboratory session in which this assignment is due). Ultimately, you report and
 your presentation should draw conclusions about which data management technique is the fastest.
 
-Students who would like to learn more about JoSQL should visit the project's Web site at:
+Students who would like to learn more about JoSQL should visit the project's Web site at
 \url{http://josql.sourceforge.net/}. Additionally, students who would like to learn more about conducting the type of
 empirical study required by this laboratory assignment are encouraged to read the paper ``Ask and You Shall Receive:\
 Empirically Evaluating Declarative Approaches to Finding Data in Unstructured Heaps'' by William F.\ Jones and Gregory
 M.\ Kapfhammer.
 
 Since this is a two week assignment, the students in each team should carefully manage their time through Google
-Calendar and team, ensuring that everyone can make a strong contribution to the project. Teams that experience project
+Calendar and email, ensuring that everyone can make a strong contribution to the project. Teams that experience project
 management issues should see the instructor immediately.
 
 \section*{Summary of the Required Deliverables}
@@ -100,28 +100,29 @@ You and your team should always use your Git repository, hosted by Bitbucket, to
 benchmarking framework, all of the CSV data files, the final report, and the presentation slides. The repository must be
 shared with the course instructor and the version control log should accurately reflect each student's contribution to
 this assignment. In addition, this assignment invites your team to submit one printed version of the following
-deliverables:
+deliverables; each member should write and submit their own version of the first deliverable. 
 
-\vspace*{-.05in}
+% \vspace*{-.05in}
+
 \begin{enumerate}
-    \setlength{\itemsep}{0pt}
-  \item A one to three paragraph commentary on the work that each team member completed. 
+    % \setlength{\itemsep}{0pt}
+  \item A five paragraph commentary on the work that each team member completed. 
   \item A full-featured description of the key features provided by the JoSQL library.
   \item The output from each team member's use of the {\tt FileFinder.java} program.
   \item The properly formatted and documented version of the source code for your benchmarks.
-  \item The CSV data files resulting from all of the runs of your benchmarks.
+  \item The CSV data files resulting from all of the runs of your benchmarking framework.
   \item A comprehensive report describing your benchmarks, the evaluation metrics, and the results.
     \item The presentation slides to support your team's five minute presentation.
 \end{enumerate}
 
-\vspace*{-.1in} 
+% \vspace*{-.1in} 
 
 In adherence to the Honor Code, students should complete this assignment while exclusively collaborating with the
 members of their team. While it is appropriate for students in this class---who are not in the same team---to have
 high-level conversations about the assignment, it is necessary to distinguish carefully between the team that discusses
 the principles underlying a problem with another team and the team that produces an assignment that is identical to, or
-merely a variation on, the work of another team.  Deliverables that are nearly identical to the work of others will be
-taken as evidence of violating Allegheny College's \mbox{Honor Code}.
+merely a variation on, the work of another team.  Deliverables from one that are nearly identical to the work of another
+team will be taken as evidence of violating Allegheny College's \mbox{Honor Code}.
 
 % Before you turn in this assignment, you also must ensure that the course instructor has read access to your Bitbucket
 % repository that is named according to the convention {\tt cs380F2014-<your user name>}.  Please see the instructor if
